==================================
Rilascio 1.70.12    del 10/01/2016
==================================

Eliminata la necessità di definire l'utente SERVER per ricevere notifiche dal modulo pratiche.

Autenticazione LDAP.

Maestro: arricchito il preprocessore di macro con i nuovi comandi ZEROLEN, NOEMPTY, SETEMPTY, LENGTH, SUBSTR, RIGHT, DATETOSTR, TIMETOSTR, NUMTOSTR, STRTONUM, CONCAT.
Inoltre conserva le formule all'interno delle stringhe costanti ed è stato reso ricorsivo.

==================================
Rilascio 1.70.11    del 26/12/2015
==================================

Pratiche: invio di email anche in caso di cambio destinatario.

Frame MDI: scroll auto in caso di dialogbox troppo grandi.

==================================
Rilascio 1.70.10    del 01/10/2015
==================================

Perfezionato il comportamento di ryPaper.

Ridotta l'anteprima attività in gestione pratiche.

Migliorata l'apertura dei database con ODBC.

Considerato non bloccante il mancato invio di email in gestione pratiche.

Corretta l'importazione degli utenti Ego.

==================================
Rilascio 1.70.09    del 17/08/2015
==================================

ryGauge.php: rilasciata la versione completa.

==================================
Rilascio 1.70.08    del 26/07/2015
==================================

Filibuster: disallocato un oggetto pendente in rimozione form.

ryQue, ryUnbound: immagini non più dipendenti dal posizionamento dei javascript mediate CSS.

ryUnbound: eliminate le dipendeze da ryBox e jquery-desktop.

==================================
Rilascio 1.70.07    del 20/07/2015
==================================

Ufficializzata la denominazione "algoritmo di gauge" per il rimedio alla complessità del problema delle somme parziali.
Cambiati i nomi a file e variabili.

Filibuster: corretto errore ne caso di cambio tipo pagina da "summary" ad altro; PARENTID non veniva blankato rendendo incancellabile la pagina senza motivo.
